fix(shs-6188): menu spacing in global footer

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_global-footer.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_global-footer.scss
@@ -93,7 +93,7 @@
     display: block;
 
     @include grid-media-only('sm') {
-      margin-left: hb-calculate-rems(10px);
+      margin-right: hb-calculate-rems(10px);
     }
 
     @include grid-media('sm') {
